css/style.css
body {
	padding: 0;
	margin: 0;
	font-family:"Helvetica Neue",sans-serif !important;
	font-size: 18px;
	font-weight: 300;
	color: #333;
	letter-spacing: 2px;
	word-spacing: 3px;
	background: #fafafa;
	overflow: hidden;
}

/*Layout*/

* {
	box-sizing:border-box;
}
a {
	color: #fff;
	text-decoration: none;
}
li {
	list-style: none !important;
}
.page {
	height: 100vh;
	overflow: auto;
	width: 100%;
	background: #fafafa;
	margin-right: -10px;
	overflow-x: hidden;
}
.page > * {
	display: flex;
	align-items: center;
	justify-content: space-between;	
}
.navbar,.footer {
	width: 100%;
	height: 70px;
	/*flex:70%;*/
}
.container {
	/*position: relative;*/
	/*min-height: 200px;*/
	width: 100%;
	/*background: #000;*/
	align-items: flex-start;


}
.sidebar {
	position: relative;
	/*To fix the scrolling bug I have to use JS
	to find .hero-banner rendered height and 
	when the scroll position is less than height ,
	the sidebar will be pos-rel , when the scroll 
	position is greater than hero height , sidebar will be pos-fixed
*/
	width: 25%;
	top: 0px;
	height: 100vh;
	overflow: auto;
}
.main {
	/*min-height: 2000px;*/
	/*height: 2000px;*/
	width: 75%;
	background: #fff;
	/*z-index: 2;*/
}
.modal {
	width: 80%;
	position: absolute;
	top: 12%;
	left: 10%;
	height: 80vh;
	background: #f6f6f6;
	z-index: 1;
	display: none;
	box-shadow: 2px 5px 20px 2px rgba(0,0,0,0.2);
	overflow-x: hidden;
	overflow-y: auto;
}
.modal h2{
	text-align: center;
	margin-top: 12%;
}
.closeModal {
	background: transparent !important;
	position: absolute;
	right: 12px;
	font-size: 20px !important;
	top: -16px;
	color: #777 !important;
}
.closeModal:hover {
	color: #000 !important;
}
.footer {
	margin-top: 10px;
	position: relative;
	z-index: 1;
}
/*Basic Layout Ends*/

/*Custom Styling starts*/
@font-face{ 
	font-family: 'handwriting';
	src: url('fonts/fablet/fabfeltscript-bold.eot');
	src: url('fonts/fablet/fabfeltscript-bold.eot?#iefix') format('embedded-opentype'),
	     url('fonts/fablet/fabfeltscript-bold.woff') format('woff'),
	     url('fonts/fablet/fabfeltscript-bold.ttf') format('truetype'),
	     url('fonts/fablet/fabfeltscript-bold.svg#webfont') format('svg');
}
.center {
	text-align: center;
}
.input-field {
	border: 3px solid #E57E31;
	border-radius: 20px;
	width: 200px;
	height: 36px;
	margin-right: 20px;
	/*font-size: 16px;*/
	padding-left: 20px;
	letter-spacing: 1px;
	word-spacing: 2px;
	background: transparent;
	transition:.5s;	
}
.posts-card:before {
	content: "Read these latest articles";
	position: absolute;
	top: -100px;
	font-size: 24px;
	font-weight: normal;
	left: 20px;
	padding: 15px 60px;
	padding-left: 0;
	border-bottom: 2px solid;
	/*color: rgba(229,126,49,1);*/ 
	color: #053140;
	letter-spacing: 0;
}
.posts-card {
	position: relative;
	margin: 140px 0;
	height: 300px;
	background: #fff;
	width: 75%;
}
.posts-card>.preloader-box {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 300px;
	background: #fafafa;
	width: 100%;
	position: absolute;
	top: 0;
	left: 0;
	z-index: 2;
	font-size: 32px;
}
.posts-card .preloader {
	/*width: 40px;*/
	/*height: 40px;*/
	padding: 20px;
  	/*transform: rotate(180deg);*/
	border: 10px solid rgba(0, 182, 72, 0.59);
	border-top: 10px solid #fafafa;
	border-radius: 100%;
	animation: rotate 2s infinite linear;
	-webkit-animation: rotate 1.2s infinite linear;
}
.card-details {
	/*width: 33.33%;*/
	/*margin: 0 5px;*/
	height: 100%;
}
#card-details2 {
	margin: 0 20px;
}

.img-container {
	position: relative;
}
.img-container>img {
	width: 100%;
	height: 150px;
	object-fit:cover;
}
.overlay {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 150px;
	background: rgba(0, 182, 72, 0.59);
	z-index: -1;
	transition: .4s;
	opacity: 0;
	text-align: center;
	display: flex;
	align-items: center;
	justify-content: center;	
}
.caption>a {
	padding: 16px 40px;
	display: block;
	font-size: 20px;
	/*transition: .8s;*/
	color: #fff;
	border: 2px solid #fff;

}
.caption>a:hover {
	border: 3px solid #fff;
	background: transparent;
	font-weight: bold;
}
.img-container:hover>.overlay {
	z-index: 2;
	opacity: 1;
}
.card-details>p {
	padding: 5px 25px;
	letter-spacing: 0;
	font-size: 20px;
	color: #666;
    line-height: 1.5em;
    font-weight: bold;
}
.input-field:focus {
	background: #fff;
	border-color: #fff;
}
* ,*:hover,*:focus {
	outline: 0px;
}
.navbar {
	background: #fff;
	background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
	position: relative;
	z-index: 2;
	/*border-bottom: 1px solid rgba(192,201,208,1);*/
	margin-bottom: -70px;
}
.hero-banner {
	background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("../assets/hero.jpg");
	background-size: cover;
	height: 65vh;
	min-height: 450px;
	position: relative;
	z-index: 1;
	display: flex;
	align-items: center;
	justify-content:center;
	width: 100%;
}
.topic {
	font-size: 24px;
	font-weight: 900;
	color: #fff;
	font-family: 'handwriting';
	word-spacing: 4px;
	width: 50%;
	text-align: center;
	/*height: 100%;*/


}
.author-pic {
	margin-top: 100px;
	width: 120px;
	height: 120px;
	border-radius: 100%;
	/*border: 10px solid #141415;*/
	/*background: #e1e1e1;*/
	box-shadow: 5px 6px 14px 2px rgba(0,0,0,0.4);

}
.author-name {
	font-size: 16px;
	font-family: 'Open Sans',sans-serif;
}
.logo {}
.brand-name {
	font-size: 26px;
	font-family: 'handwriting';
	margin-left: 20px;
	color: #FBB913;
	height: 70px;
	vertical-align: middle;
	line-height: 70px;
	text-align: left;
	width: 30%;
}
.main {
	margin-top: 20px;
	padding: 20px;
	line-height: 2em;
	font-size: 18px;
	padding-right: 40px;
}
.info-text {
	font-family: "Lato", "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
	/*font-weight: 400;*/
	font-style: normal;
	line-height: 2;
	font-size: 18px;
	color: black;
	word-spacing: 6px;
	letter-spacing: 0px;

}
.breadcrumb>li {
	display: inline;
}
.widget p {
	color: #000;
	text-align: center;
}
.index-list {
	padding: 0;
}
/* ... */

